refactor: move styles to globlas styles creating a object with classNames

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,132 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.width--full {
+  width: 100%;
+}
+
+.width--sm {
+  width: 100%;
+  max-width: 640px;
+}
+
+.width--md {
+  width: 100%;
+  max-width: 768px;
+}
+
+.width--lg {
+  width: 100%;
+  max-width: 1024px;
+}
+
+.width--xl {
+  width: 100%;
+  max-width: 1280px;
+}
+
+.width--2xl {
+  width: 100%;
+  max-width: 1536px;
+}
+
+.display--block {
+  display: block;
+}
+
+.display--flex {
+  display: flex;
+}
+
+.justify-content--flex-start {
+  justify-content: flex-start;
+}
+
+.justify-content--flex-end {
+  justify-content: flex-end;
+}
+
+.justify-content--center {
+  justify-content: center;
+}
+
+.justify-content--space-between {
+  justify-content: space-between;
+}
+
+.justify-content--space-around {
+  justify-content: space-around;
+}
+
+.alignItems--flex-start {
+  align-items: flex-start;
+}
+
+.alignItems--flex-end {
+  align-items: flex-end;
+}
+
+.alignItems--center {
+  align-items: center;
+}
+
+.alignItems--space-between {
+  align-items: space-between;
+}
+
+.alignItems--space-around {
+  align-items: space-around;
+}
+
+.font-size--sm {
+  font-size: 14px;
+}
+
+.font-size--md {
+  font-size: 16px;
+}
+
+.font-size--lg {
+  font-size: 18px;
+}
+
+.font-size--xl {
+  font-size: 24px;
+}
+
+.font-size--2xl {
+  font-size: 28px;
+}
+
+.font-weight--thin {
+  font-weight: 100;
+}
+
+.font-weight--light {
+  font-weight: 300;
+}
+
+.font-weight--normal {
+  font-weight: 400;
+}
+
+.font-weight--medium {
+  font-weight: 500;
+}
+
+.font-weight--semibold {
+  font-weight: 600;
+}
+
+.font-weight--bold {
+  font-weight: 700;
+}
+
+.font-weight--extrabold {
+  font-weight: 800;
+}
+
+.font-weight--black {
+  font-weight: 900;
+}
