--- a/styles/globals.css
+++ b/styles/globals.css
@@ -152,3 +152,14 @@ a {
 .font-weight--black {
   font-weight: 900;
 }
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.75rem;
+}
+
+.form-group--error input,
+.form-group-error select {
+  border: 1px solid red;
+}
