feat: add global styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,16 @@
 html,
 body,
-button {
+button,
+ul,
+li {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+ul {
+  list-style: none;
 }
 
 a {
