--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,8 @@ html,
 body,
 button,
 ul,
-li {
+li,
+figure {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
