--- a/components/PhoneDetail/PhoneDetail.module.css
+++ b/components/PhoneDetail/PhoneDetail.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  margin-top: 2rem;
+  margin: 3rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,5 +23,10 @@
 }
 
 .wrapper main {
+  width: 100%;
+}
+
+.wrapper footer {
+  margin-top: 2rem;
   width: 100%;
 }
