--- a/components/PhoneList/PhoneList.module.css
+++ b/components/PhoneList/PhoneList.module.css
@@ -1,5 +1,5 @@
 .list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
   gap: 2rem;
 }
