refactor: create and add colors variables

--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -1,8 +1,8 @@
 .button {
   padding: 1rem;
   border-radius: 0.375rem;
-  background-color: #edf2f7;
-  color: black;
+  background-color: var(--color-gray--300);
+  color: var(--color-black);
   border: none;
   cursor: pointer;
   transition-property: background-color;
@@ -10,5 +10,5 @@
 }
 
 .button:hover {
-  background-color: #E2E8F0;
+  background-color: var(--color-gray--400);
 }
