--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -8,19 +8,19 @@
   padding: 1rem;
   display: flex;
   justify-content: center;
-  background-color: white;
-  border-bottom: 1px solid #e2e2e2;
+  background-color: var(--color-white);
+  border-bottom: 1px solid var(--color-gray--200);
 }
 
 .main {
   padding: 1rem;
   flex: 1;
-  background-color: #fafafa;
+  background-color: var(--color-gray--100);
 }
 
 .footer {
   display: grid;
   place-content: center;
-  background-color: white;
-  border-top: 1px solid #e2e2e2;
+  background-color: var(--color-white);
+  border-top: 1px solid var(--color-gray--200);
 }
