feat: create styles for <a> element

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -145,3 +145,14 @@
 .form-group-error select {
   border: 1px solid var(--color-red);
 }
+
+a {
+  padding: 0.5rem;
+  background-color: transparent;
+  border-radius: 8px;
+  transition: background 0.3s;
+}
+
+a:hover {
+  background-color: var(--color-gray--300);
+}
