--- a/styles/theme.css
+++ b/styles/theme.css
@@ -146,13 +146,13 @@
   border: 1px solid var(--color-red);
 }
 
-a {
+.custom-link {
   padding: 0.5rem;
   background-color: transparent;
   border-radius: 8px;
   transition: background 0.3s;
 }
 
-a:hover {
+.custom-link:hover {
   background-color: var(--color-gray--300);
 }
