feat: add hover styles on cards

--- a/components/PhoneCard/PhoneCard.module.css
+++ b/components/PhoneCard/PhoneCard.module.css
@@ -1,3 +1,11 @@
+.card {
+  transition: all .15s ease;
+}
+
+.card:hover {
+  transform: translateY(-6px);
+}
+
 .image-wrapper {
   width: 100%;
   height: auto;
